fix: some spacing fixes

--- a/src/components/ControlBar/ViewControlBar/styles/ClearButton.module.css
+++ b/src/components/ControlBar/ViewControlBar/styles/ClearButton.module.css
@@ -24,5 +24,6 @@
 @media only screen and (max-width: 480px) {
     .button {
         margin-bottom: var(--spacers-dp4);
+        margin-right: 1px;
     }
 }
