--- a/src/components/ControlBar/ViewControlBar/styles/Content.module.css
+++ b/src/components/ControlBar/ViewControlBar/styles/Content.module.css
@@ -24,6 +24,7 @@
 
     .controlsSmall {
         display: block;
+        margin-bottom: var(--spacers-dp4);
     }
 
     .controlsLarge {
